--- a/src/index.less
+++ b/src/index.less
@@ -39,7 +39,8 @@
   text-align: center;
 }
 
-@z-index-modal: 1000;
+@z-index-modal-mask: 1000;
+@z-index-modal-content: 1100;
 @z-index-dropdown: 1200;
 @z-index-select: 1200;
 @z-index-date-picker: 1500;
